# SAPPOROBDD2-test

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  README_ja.md
.github/workflows/: docs.yml
docs/: Doxyfile  advanced.rst  changelog.rst  conf.py  faq.rst  index.rst  introduction.rst  migration.rst  quickstart.rst  requirements.txt  tutorial.rst
docs/api/: bdd.rst  core.rst  exception.rst  extended.rst  index.rst  mtbdd.rst  mvdd.rst  tdzdd.rst  utility.rst  zdd.rst  zdd_helper.rst
docs/application/: combinatorial_enumeration.rst  graph_problems.rst  index.rst  sat_constraints.rst
docs/examples/: apply.rst  cnf.rst  gameoflife.rst  hamiltonian.rst  index.rst  nqueens.rst  relprod.rst  tictactoe.rst
docs/guide/: bdd_guide.rst  gbase_guide.rst  index.rst  io_guide.rst  mvdd_guide.rst  tdzdd_guide.rst  zdd_guide.rst
examples/: CMakeLists.txt  THIRD_PARTY_LICENSES.md  apply.cpp  cnf.cpp  gameoflife.cpp  hamiltonian.cpp  nqueens.cpp  relprod.cpp  tictactoe.cpp
include/sbdd2/: bdd.hpp  bddct.hpp  dd_base.hpp  dd_manager.hpp  dd_node.hpp  dd_node_ref.hpp  exact_int.hpp  exception.hpp  gbase.hpp  io.hpp  mtbdd.hpp  mtdd_base.hpp  mtzdd.hpp  mvbdd.hpp  mvdd_base.hpp  mvdd_node_ref.hpp  mvzdd.hpp  pidd.hpp  qdd.hpp  sbdd2.hpp  seqbdd.hpp  types.hpp  unreduced_bdd.hpp  unreduced_zdd.hpp  zdd.hpp  zdd_helper.hpp  zdd_index.hpp  zdd_iterators.hpp
include/sbdd2/tdzdd/: DdEval.hpp  DdSpec.hpp  DdSpecOp.hpp  Sbdd2Builder.hpp  Sbdd2BuilderDFS.hpp  Sbdd2BuilderMP.hpp  VarArityDdSpec.hpp
src/: bdd.cpp  bddct.cpp  dd_base.cpp  dd_manager.cpp  dd_node.cpp  dd_node_ref.cpp  gbase.cpp  io.cpp  mvdd_node_ref.cpp  pidd.cpp  qdd.cpp  seqbdd.cpp  unreduced_bdd.cpp  unreduced_zdd.cpp  zdd.cpp  zdd_helper.cpp  zdd_index.cpp  zdd_iterators.cpp
tests/: CMakeLists.txt  test_basic.cpp  test_bdd.cpp  test_extended.cpp  test_mtbdd.cpp  test_mtzdd.cpp  test_mvbdd.cpp  test_mvdd_node_ref.cpp  test_mvzdd.cpp  test_tdzdd.cpp  test_tdzdd_dfs.cpp  test_zdd.cpp
